# crosscompute-examples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.goals  automate-plus.yaml  automate-plus.yml  automate.yaml  automate.yml  base.html  base.jinja2  pyproject.toml  root.html  root.jinja2  serve.yml  setup.sh  style.css  temporary.yaml  test.yaml  test.yml  test_examples.py  tests.py
add-columns/: .crosscompute.toml  run.py  run.sh
add-integers/: .crosscompute.ini  cc.ini  run.py  test_serve.py
add-numbers/: .crosscompute.ini  .crosscompute.toml  .crosscompute.yml  .gitignore  automate.yaml  automate.yml  crosscompute.ini  report.yml  result-batch.yml  result.css  result.yml  run.ipynb  run.py  run.sh  setup.sh  tool.yml
add-watermark-pdf/: tool.yml
airport-traffic/: automate.yml  setup.sh
ask-question/: automate.yml
compare-datestamps/: run.py  tool.yml
compare-timestamps/: cc.ini  run.py
compute-logarithms/: automate.yml  output.md  run.ipynb  style.css
convert-image/: automate.yaml  automate.yml  run.py  setup.sh
convert-timestamps/: .crosscompute.yml  TODO.goals  ask.md  cc.ini  result.md  run.ipynb  run.py  setup.sh  strftimes.txt  timestamps.csv  timezones.txt  tool.md  tool.yml
count-assets/: automation.yml  report.yml  result-batch.yml  result.yml  run.ipynb  tool.yml
count-geometries/: tool.yml
count-words/: .crosscompute.yml  README.md  automate.yml  cc.ini  input.md  output.md  run.ipynb  run.py  run.sh  test_run.py  tool.yml
diff-texts/: automate.yaml  automate.yml  input.md  output.md
(+618 files in other folders)
