[tool.poetry]
name = "crosscompute-examples"
version = "0.1.0"
description = ""
authors = ["CrossCompute"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
crosscompute = ">=0.9.1.6"
crosscompute-views-map = ">=0.0.2"
jupyterlab-crosscompute = ">=0.2.0.1"
geopy = "^2.2.0"
matplotlib = "^3.5.1"
invisibleroads-macros-disk = "^1.2.1"
openpyxl = "^3.0.9"
pandas = "^1.4.1"
jupyterlab = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
